// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDetailsPage /> renders when loading data 1`] = `
<div
  className="Component-root-1"
>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
    >
      <div
        className="Component-root-32"
      >
        <button
          className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiIconButton-colorInherit-36 Component-menuButton-31"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-40"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-44"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-50"
          />
        </button>
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          <span
            className="Component-skeleton-81"
            style={
              Object {
                "width": "10em",
              }
            }
          >
            ‌
          </span>
        </h2>
        <div
          className="Component-action-29"
        >
          <button
            className="MuiButtonBase-root-41 MuiButtonBase-disabled-42 MuiIconButton-root-35 MuiIconButton-disabled-39"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
            </span>
          </button>
          <button
            className="MuiButtonBase-root-41 MuiButtonBase-disabled-42 MuiIconButton-root-35 MuiIconButton-disabled-39"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </span>
          </button>
          <button
            className="MuiButtonBase-root-41 MuiButtonBase-disabled-42 MuiIconButton-root-35 MuiIconButton-disabled-39"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiCardContent-root-82"
      >
        <p
          className="MuiTypography-root-57 MuiTypography-body1-66"
        >
          <span
            className="Component-skeleton-81"
            style={undefined}
          >
            ‌
          </span>
        </p>
      </div>
    </div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 Component-card-127"
    >
      <div
        className="Component-root-32"
      >
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          Images
        </h2>
        <div
          className="Component-action-29"
        />
      </div>
      <div
        className="MuiCardContent-root-82"
      >
        <div
          className="Component-root-126"
        >
          <div
            className="MuiGridListTile-root-129 Component-gridElement-128"
          >
            <div
              className="MuiGridListTile-tile-130"
            >
              <img
                src="/url/to/image.png"
              />
              <div
                className="MuiGridListTileBar-root-133 MuiGridListTileBar-titlePositionBottom-134"
              >
                <div
                  className="MuiGridListTileBar-titleWrap-137"
                >
                  <div
                    className="MuiGridListTileBar-title-140"
                  >
                    Loading...
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
    >
      <div
        className="MuiCardContent-root-82"
      >
        <label
          className="MuiFormControlLabel-root-87 MuiFormControlLabel-disabled-88"
        >
          <span
            className="MuiSwitch-root-90"
          >
            <span
              className="MuiButtonBase-root-41 MuiButtonBase-disabled-42 MuiIconButton-root-35 MuiIconButton-disabled-39 MuiSwitchBase-root-99 MuiSwitchBase-default-101 MuiSwitch-default-94 MuiSwitchBase-disabled-103 MuiSwitch-disabled-98"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role={undefined}
              tabIndex="-1"
            >
              <span
                className="MuiIconButton-label-40"
              >
                <span
                  className="MuiSwitch-icon-92"
                />
                <input
                  checked={false}
                  className="MuiSwitchBase-input-100"
                  disabled={true}
                  id={undefined}
                  name={undefined}
                  onChange={[Function]}
                  tabIndex={undefined}
                  type="checkbox"
                  value={undefined}
                />
              </span>
            </span>
            <span
              className="MuiSwitch-bar-91"
            />
          </span>
          <span
            className="MuiTypography-root-57 MuiTypography-body1-66 MuiFormControlLabel-label-89"
          >
             
          </span>
        </label>
        <p
          className="MuiTypography-root-57 MuiTypography-body1-66"
        >
          <span
            className="Component-skeleton-81"
            style={undefined}
          >
            ‌
          </span>
        </p>
      </div>
      <table
        className="MuiTable-root-104"
      >
        <tbody
          className="MuiTableBody-root-105"
        >
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Sale price
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span
                className="Component-skeleton-81"
                style={undefined}
              >
                ‌
              </span>
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Purchase cost
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span
                className="Component-skeleton-81"
                style={undefined}
              >
                ‌
              </span>
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Gross margin
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span
                className="Component-skeleton-81"
                style={undefined}
              >
                ‌
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 Component-card-119"
    >
      <div
        className="Component-root-32"
      >
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          Collections
        </h2>
        <div
          className="Component-action-29"
        />
      </div>
      <table
        className="MuiTable-root-104"
      >
        <tbody
          className="MuiTableBody-root-105"
        >
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113"
              scope={undefined}
            >
              <span
                className="Component-skeleton-81"
                style={undefined}
              >
                ‌
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
  >
    <div
      className="Component-root-32"
    >
      <h2
        className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
      >
        Variants
      </h2>
      <div
        className="Component-action-29"
      />
    </div>
    <table
      className="MuiTable-root-104"
    >
      <thead
        className="MuiTableHead-root-125"
      >
        <tr
          className="MuiTableRow-root-106 MuiTableRow-head-107"
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            SKU
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            Status
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112 Component-alignRightText-121"
            scope="col"
          >
            Price
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112 Component-alignRightText-121"
            scope="col"
          >
            Gross margin
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root-105"
      >
        <tr
          className="MuiTableRow-root-106"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            <span
              className="Component-skeleton-81"
              style={undefined}
            >
              ‌
            </span>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            <span
              className="Component-skeleton-81"
              style={undefined}
            >
              ‌
            </span>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            <span
              className="Component-skeleton-81"
              style={undefined}
            >
              ‌
            </span>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            <span
              className="Component-skeleton-81"
              style={undefined}
            >
              ‌
            </span>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            <span
              className="Component-skeleton-81"
              style={undefined}
            >
              ‌
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ProductDetailsPage /> renders with data 1`] = `
<div
  className="Component-root-1"
>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
    >
      <div
        className="Component-root-32"
      >
        <button
          className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiIconButton-colorInherit-36 Component-menuButton-31"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-40"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-44"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-50"
          />
        </button>
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          Our totally awesome book
        </h2>
        <div
          className="Component-action-29"
        >
          <button
            className="MuiButtonBase-root-41 MuiIconButton-root-35"
            disabled={false}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-50"
            />
          </button>
          <button
            className="MuiButtonBase-root-41 MuiIconButton-root-35"
            disabled={false}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-50"
            />
          </button>
          <button
            className="MuiButtonBase-root-41 MuiIconButton-root-35"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-50"
            />
          </button>
        </div>
      </div>
      <div
        className="MuiCardContent-root-82"
      >
        <p
          className="MuiTypography-root-57 MuiTypography-body1-66"
        >
          Aenean sit amet malesuada nibh. Proin nisi lorem, facilisis at tortor vel, convallis ornare nibh. In nec ipsum porta, varius leo eu, condimentum quam. Donec gravida euismod ipsum, at consequat orci efficitur nec. Phasellus lectus arcu, auctor eget porttitor eget, venenatis a lacus. Suspendisse quis urna rhoncus, commodo justo at, tempor nisl.
        </p>
      </div>
    </div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 Component-card-127"
    >
      <div
        className="Component-root-32"
      >
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          Images
        </h2>
        <div
          className="Component-action-29"
        />
      </div>
      <div
        className="MuiCardContent-root-82"
      >
        <div
          className="Component-root-126"
        >
          <div
            className="MuiGridListTile-root-129 Component-gridElement-128"
          >
            <div
              className="MuiGridListTile-tile-130"
            >
              <img
                alt="Image 1"
                src="/url/to/image.png"
              />
              <div
                className="MuiGridListTileBar-root-133 MuiGridListTileBar-titlePositionBottom-134"
              >
                <div
                  className="MuiGridListTileBar-titleWrap-137"
                >
                  <div
                    className="MuiGridListTileBar-title-140"
                  >
                    Image 1
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGridListTile-root-129 Component-gridElement-128"
          >
            <div
              className="MuiGridListTile-tile-130"
            >
              <img
                alt="Image 2"
                src="/url/to/image.png"
              />
              <div
                className="MuiGridListTileBar-root-133 MuiGridListTileBar-titlePositionBottom-134"
              >
                <div
                  className="MuiGridListTileBar-titleWrap-137"
                >
                  <div
                    className="MuiGridListTileBar-title-140"
                  >
                    Image 2
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
    >
      <div
        className="MuiCardContent-root-82"
      >
        <label
          className="MuiFormControlLabel-root-87"
        >
          <span
            className="MuiSwitch-root-90"
          >
            <span
              className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiSwitchBase-root-99 MuiSwitchBase-default-101 MuiSwitch-default-94 MuiSwitchBase-checked-102 MuiSwitch-checked-95 MuiSwitch-checkedPrimary-96"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role={undefined}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label-40"
              >
                <span
                  className="MuiSwitch-icon-92 MuiSwitch-iconChecked-93"
                />
                <input
                  checked={true}
                  className="MuiSwitchBase-input-100"
                  disabled={false}
                  id={undefined}
                  name={undefined}
                  onChange={[Function]}
                  tabIndex={undefined}
                  type="checkbox"
                  value={undefined}
                />
              </span>
              <span
                className="MuiTouchRipple-root-50"
              />
            </span>
            <span
              className="MuiSwitch-bar-91"
            />
          </span>
          <span
            className="MuiTypography-root-57 MuiTypography-body1-66 MuiFormControlLabel-label-89"
          >
            Published
          </span>
        </label>
        <p
          className="MuiTypography-root-57 MuiTypography-body1-66"
        >
          <span
            className="Component-greenText-83"
          >
            Available
          </span>
        </p>
      </div>
      <table
        className="MuiTable-root-104"
      >
        <tbody
          className="MuiTableBody-root-105"
        >
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Sale price
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span>
                30 $
                 - 
                40 $
              </span>
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Purchase cost
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span>
                30 $
                 - 
                40 $
              </span>
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-leftCell-84"
              scope={undefined}
            >
              Gross margin
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-rightCell-86"
              scope={undefined}
            >
              <span>
                30 $
                 - 
                40 $
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 Component-card-119"
    >
      <div
        className="Component-root-32"
      >
        <h2
          className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
        >
          Collections
        </h2>
        <div
          className="Component-action-29"
        />
      </div>
      <table
        className="MuiTable-root-104"
      >
        <tbody
          className="MuiTableBody-root-105"
        >
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-120"
              onClick={undefined}
              scope={undefined}
            >
              Winter collection
            </td>
          </tr>
          <tr
            className="MuiTableRow-root-106"
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-120"
              onClick={undefined}
              scope={undefined}
            >
              Emperor's choice
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
  >
    <div
      className="Component-root-32"
    >
      <h2
        className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
      >
        Variants
      </h2>
      <div
        className="Component-action-29"
      />
    </div>
    <table
      className="MuiTable-root-104"
    >
      <thead
        className="MuiTableHead-root-125"
      >
        <tr
          className="MuiTableRow-root-106 MuiTableRow-head-107"
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            SKU
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112"
            scope="col"
          >
            Status
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112 Component-alignRightText-121"
            scope="col"
          >
            Price
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-head-112 Component-alignRightText-121"
            scope="col"
          >
            Gross margin
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root-105"
      >
        <tr
          className="MuiTableRow-root-106"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            abc123
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-123"
            onClick={undefined}
            scope={undefined}
          >
            XS
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-greenText-122"
            scope={undefined}
          >
            Available
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            10 $
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            5 %
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-106"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            abc124
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-123"
            onClick={undefined}
            scope={undefined}
          >
            S
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-greenText-122"
            scope={undefined}
          >
            Available
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            10 $
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            5 %
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-106"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            abc125
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-123"
            onClick={undefined}
            scope={undefined}
          >
            M
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-redText-124"
            scope={undefined}
          >
            Unavailable
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            11 $
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            6 %
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-106"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113"
            scope={undefined}
          >
            abc126
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-link-123"
            onClick={undefined}
            scope={undefined}
          >
            L
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-greenText-122"
            scope={undefined}
          >
            Available
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            12 $
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root-111 MuiTableCell-body-113 Component-alignRightText-121"
            scope={undefined}
          >
            6 %
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
